tests/codegen/errors/reader/special-forms/atom.reader.error.reader.let.binding.missing.close/reader-let-binding-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-let-binding-missing-close
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/special-forms
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ']' after let binding value
;; TEST-ATOM: atom.reader.error.reader.let.binding.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.let.binding.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ']' after let binding value
;; TEST-READER-PATH: reader.c:3373 parser.let
;; TEST-CODEGEN-PATH: diagnostic.parser.let
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3373 Expected ']' after let binding value
;; TEST-USES-ATOM: atom.reader.error.reader.let.binding.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.let
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/special-forms/atom.reader.error.reader.let.binding.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/special-forms/atom.reader.error.reader.let.binding.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.let.binding.missing.close
;; TEST-CLI-TARGET: codegen errors reader special-forms

(module Main)
(let ([x 1) x)
